# docs/swagger.yaml
@@ -13,6 +13,15 @@ definitions:
         description: 状态信息
         type: string
     type: object
+  models.APINoteDelSuccessResponse:
+    properties:
+      code:
+        type: integer
+      detail:
+        type: string
+      msg:
+        type: string
+    type: object
   models.APINoteFailed:
     properties:
       code:
@@ -327,6 +336,35 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 添加一个笔记
+      tags:
+      - notes
+  /api/v1/admin/notes/{id}:
+    delete:
+      description: 根据ID删除笔记
+      parameters:
+      - description: 笔记ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除笔记成功
+          schema:
+            $ref: '#/definitions/models.APINoteDelSuccessResponse'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/models.APINoteFailed'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/models.APINoteFailed'
+      security:
+      - ApiKeyAuth: []
+      summary: 删除一个笔记
       tags:
       - notes
   /user/login:
