# models/ApiResponse.go
@@ -17,8 +17,16 @@ type APINotesGetSuccessResponse struct {
 	Msg    string          `json:"msg"`    //状态信息
 	Detail []NoteResponse `json:"detail"` //详细信息
 }
+
+type APINoteDelSuccessResponse struct{
+	Code int `json:"code"`
+	Msg string `json:"msg"`
+	Detail string `json:"detail"`
+}
+
 type APINoteFailed struct {
 	Code   int    `json:"code"`
 	Msg    string `json:"msg"`
 	Delete string `json:"delete"`
 }
+
